Set php_admin_flag[log_errors] to off for bigcommerce_app pool
Apparently this flag just makes the workers put their logs in the main
php-fpm logfile or error_log, rather than disabling/enabling them.

--- a/templates/fpm/pool.conf.erb
+++ b/templates/fpm/pool.conf.erb
@@ -345,11 +345,11 @@ env[<%= key %>] = '<%= value %>'
 <% if @error_log -%>
 php_flag[display_errors] = off
 php_admin_value[error_log] = <%= @error_log %>
-php_admin_flag[log_errors] = on
-<% else -%>
-php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/php-fpm/www-error.log
 php_admin_flag[log_errors] = off
+<% else -%>
+;php_flag[display_errors] = off
+;php_admin_value[error_log] = /var/log/php-fpm/www-error.log
+;php_admin_flag[log_errors] = on
 <% end -%>
 ;php_admin_value[memory_limit] = 32M
 
